<resources>

    <string name="app_name">omegasensor</string>
    <string name="startButton">Start</string>
    <string name="ignitionTitle">Start Car</string>
    <string name="offButton">Off</string>
    <string name="redButton">Red</string>
    <string name="greenButton">Green</string>
    <string name="blueButton">Blue</string>
    <string name="minButton">Set Minimum</string>
    <string name="maxButton">Set Maximum</string>
    <string name="deviceAct">Demo Controls</string>
    <string name="deviceListAct">Discovered Sensor Hubs</string>

</resources>
